[package]
name = "rta"
version = "0.24.2"
edition = "2024"
rust-version = "1.91"

[dependencies]
big_s = "1.0.2"
colored = "2.2.0"
const_format = "0.2.35"
dirs = "5.0.1"
dyn-clone = "1.0.20"
flate2 = "1.1.5"
human-sort = "0.2.2"
minreq = { version = "2.14.1", features = ["https"] }
regex = "1.12.2"
semver = "1.0.27"
serde_json = "1.0.148"
tar = "0.4.44"
tempfile = "3.24.0"
which = "5.0.0"
xz2 = "0.1.7"
zip = "0.6.6"

[dev-dependencies]
pretty = { package = "pretty_assertions", version = "1.4.1" }

# We allow warnings here, the Makefile denies them.
# This way warnings don't hold up running compiling and running tests,
# and also don't slip past CI.

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_inception = "allow"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release]
codegen-units = 1
debug = 0
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"
